# cyc.ly

./: .gitignore  models.py  osm_parser.py  package-lock.json  requirements.txt  wykres.ipynb
.github/workflows/: deploy-frontend.yaml  prepare.yaml
algo/: main.py  map.osm  requirements.txt
algo/app/: osm_parser.py
algo/experiments/: bike_path.py  bike_path_usage.ipynb  bike_types.yaml  graph_tests.ipynb  performance_tests.ipynb  testy_algorytmu.ipynb  testy_algorytmu_extended.ipynb  testy_dodatkowe.ipynb  wykres.ipynb
backend/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  seed.py  sql_app.db
backend/.github/workflows/: prepare.yaml
backend/app/: server.py
backend/app/core/: config.py  db.py
backend/app/core/models/: route_finder.py  user.py
backend/app/paths/: __init__.py  paths_router.py
backend/app/routes/: mock.py  routes_router.py  routes_schemas.py  routes_service.py
backend/app/storage/: bike_types.yaml
backend/app/users/: __init__.py  users_router.py  users_schemas.py  users_service.py
backend/sql-scripts/: 1-init.sql  2-seed.sql
frontend/: .eslintrc.cjs  .prettierrc  bun.lockb  index.html  package-lock.json  package.json  swagger-generate.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: fonts.css  main.tsx
frontend/src/common/utils/: generate-uuid.ts  index.ts  use-dialog.ts
frontend/src/core/: App.tsx
raport/: ewidencja.xlsx  raport.ipynb
tests/: cypress.config.ts  package-lock.json  package.json
tests/cypress/e2e/: main-flow.cy.ts
tests/cypress/support/: e2e.ts
(+25 files in other folders)
