[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend for cyc.ly app"
authors = ["BartoszBugla <48729791+BartoszBugla@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
numpy = "^1.26.3"
pandas = "^2.1.4"
dill = "^0.3.7"
networkx = "^3.2.1"
osmnx = "^1.8.1"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"

[tool.poetry.scripts]
main = "app.main:main"
run-prod = "my_module:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
